Added disabled dataset and metadata file upload input boxes.

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/registry.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/registry.css
@@ -13,8 +13,10 @@ input#pointOfContactName,
 input#pointOfContactEmail,
 input#authors,
 input#title,
+input#datasetFileUpload,
 input#datasetFilePath,
 input#datasetFileUrl,
+input#metadataFileUpload,
 input#metadataFilePath,
 input#metadataFileUrl
 {
