Added in common.js and spin.js.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -20,25 +20,26 @@
             ]
         )
     }}
-    
+
     {% stylesheets  '@PelagosAppBundle/Resources/public/css/dtree.css' %}
         {{ add_css(asset_url) }}
     {% endstylesheets  %}
-    
+
     {% stylesheets  '@PelagosAppBundle/Resources/public/css/registry.css' %}
         {{ add_css(asset_url) }}
     {% endstylesheets  %}
-    
+
     {{
         add_js(
             [
                 '//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/datejs/1.0/date.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/jstree/3.0.1/jstree.min.js',
+                '//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js',
             ]
         )
     }}
-    
+
     {% javascripts '@PelagosAppBundle/Resources/public/js/dtree.js' %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
@@ -52,6 +53,10 @@
     {% endjavascripts %}
 
     {% javascripts '@PelagosAppBundle/Resources/public/js/registry.js' %}
+        {{ add_js(asset_url) }}
+    {% endjavascripts %}
+
+    {% javascripts '@PelagosAppBundle/Resources/public/js/common.js' %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
 
@@ -91,4 +96,5 @@
         </td>
     </tr>
 </table>
+<div class="modal" id="spinner"></div>
 {% endblock %}
