Cleanup per code review session.

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/registry.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/registry.css
@@ -9,7 +9,7 @@ textarea#abstract {
     width:100%;
 }
 
-input#pointOfContactName, 
+input#pointOfContactName,
 input#pointOfContactEmail,
 input#authors,
 input#title,
@@ -297,6 +297,6 @@ a.boxclose{
     background-color: white;
 }
 
-
-
-
+.sftphidden {
+    display: none;
+}
