--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
@@ -1,3 +1,5 @@
+{% set sftpuser=loggedInPerson.getAccount().isPosix() %}
+
 <div id="fileBrowser">
     <div id="fileBrowserContent"></div>
 </div>
@@ -177,16 +179,16 @@
             <div id="tabs-2"> <!-- Upload via SFTP/GridFTP -->
                 <p>Use this method when the dataset is &gt;1GB and you wish to upload the dataset file to GRIIDC (rather than place the dataset file on an HTTP (web) or FTP server and have GRIIDC pull it).
                 <strong>Note:</strong> <em>Using this method requires that you have <strong>first</strong> uploaded the file via SFTP or GridFTP.</em></p>
-                <div id=sftpSection sftpuser={{ loggedInPerson.getAccount().isPosix() }}>
-                    <div class="sftpYes" style="color:black;">
+                <div>
+                    <div class="sftpYes {{ sftpuser ? 'sftpshow' : 'sftphidden' }}" style="color:black;">
                         Your account has been configured for SFTP/GridFTP access.
                         Click <a href="https://data.gulfresearchinitiative.org/data-file-transfer-methods#SFTP" TARGET="_NEW">here</a> for instructions.</p>
                     </div>
-                    <div class="sftpNo" style="color:red;">
+                    <div class="sftpNo {{ sftpuser ? 'sftphidden' : 'sftpshow' }}" style="color:red;">
                         <p>
                         Your account has not been configured for SFTP/GridFTP access.
                         If you wish to use SFTP/GridFTP, please click here to request SFTP/GridFTP access:
-                        <BUTTON id=sftpButton sftpPath={{ path('pelagos_api_account_request_make_posix') }}>REQUEST SFTP/GridFTP</button></p>
+                        <BUTTON id=sftpButton sftpPath={{ path('pelagos_api_account_request_make_posix') }} type=button>REQUEST SFTP/GridFTP</button></p>
                     </div>
                 </div>
                 <fieldset>
@@ -197,13 +199,13 @@
                             {% endimage %}
                         </span>
                         <div class="fwtextboxcont">
-                            {% if loggedInPerson.getAccount().isPosix() %}
+                            {% if sftpuser %}
                                 {{ form_row(form.datasetFilePath) }}
                             {% else %}
                                 {{ form_row(form.datasetFilePath, { 'attr':{'disabled':'disabled'} }) }}
                             {% endif %}
                         </div>
-                        <input type="button" value="Browse..." class="fileBrowserButton" data-target="#datasetFilePath" data-type="data" {% if not loggedInPerson.getAccount().isPosix() %} DISABLED {% endif %}>
+                        <input type="button" value="Browse..." class="fileBrowserButton" data-target="#datasetFilePath" data-type="data" {% if not sftpuser %} DISABLED {% endif %}>
                         <div id="sftp_force_data_download">
                             {% if sftp_type|default and url_set|default and sftpuser|default and sftpdir|default %}
                             <!-- this can be done with js logic -->
@@ -363,12 +365,12 @@
             <div id="md-tabs-2"> <!-- Upload via SFTP/GridFTP -->
                 <p>You may use this method if you wish to upload the metadata file via SFTP/GridFTP (e.g. if you uploaded a metadata file alongside a data file that you uploaded using SFTP/GridFTP).
                 <strong>Note:</strong> <em>Using this method requires that you have <strong>first</strong> uploaded your file via SFTP or GridFTP.</em></p>
-                <div id=mdSftpSection sftpuser={{ loggedInPerson.getAccount().isPosix() }}>
-                    <div class="sftpYes" style="color:black;">
+                <div>
+                    <div class="sftpYes {{ sftpuser ? 'sftpshow' : 'sftphidden' }}" style="color:black;">
                         <p>Your account has been configured for SFTP/GridFTP access.
                         Click <a href="https://data.gulfresearchinitiative.org/data-file-transfer-methods#SFTP" TARGET="_NEW">here</a> for instructions.</p>
                     </div>
-                    <div class="sftpNo" style="color:red;">
+                    <div class="sftpNo {{ sftpuser ? 'sftphidden' : 'sftpshow' }}" style="color:red;">
                         <p>Your account has not been configured for SFTP/GridFTP access.
                         If you wish to use SFTP/GridFTP, use the "Request SFTP/GridFTP" button in the Dataset File section.</p>
                     </div>
@@ -382,13 +384,13 @@
                         </span>
                         {{ form_label(form.metadataFilePath) }}
                         <div class="fwtextboxcont">
-                            {% if loggedInPerson.getAccount().isPosix() %}
+                            {% if sftpuser %}
                                 {{ form_widget(form.metadataFilePath) }}
                             {% else %}
                                 {{ form_widget(form.metadataFilePath, { 'attr':{'disabled':'disabled'} }) }}
                             {% endif %}
                         </div>
-                        <input type="button" value="Browse..." class="fileBrowserButton" data-target="#metadataFilePath" data-type="metadata" {% if not loggedInPerson.getAccount().isPosix() %} DISABLED {% endif %}>
+                        <input type="button" value="Browse..." class="fileBrowserButton" data-target="#metadataFilePath" data-type="metadata" {% if not sftpuser %} DISABLED {% endif %}>
                         <div id="sftp_force_metadata_download">
                         {% if sftp|default %}
                             <input type="checkbox" name="sftp_force_metadata_download">import this file again from the same path
