Modified tree so that funding sources with IDs >=100 will appear under Other Sources
show_other_sources needs to be set to true in web/modules/tree/config.ini for Other Sources to be shown

--- a/web/modules/tree/templates/index.html
+++ b/web/modules/tree/templates/index.html
@@ -28,7 +28,10 @@
         researcher_action: "alert('peopleId = \{\{person.ID\}\}');",
 
         institution_color: "#00A",
-        institution_action: "alert('institutionId = \{\{institution.ID\}\}');"
+        institution_action: "alert('institutionId = \{\{institution.ID\}\}');",
+
+        other_sources_color: "#00A",
+        other_sources_action: "alert('fundSrcId = \{\{fundSrc.ID\}\}');"
     }
 
     insertTree(tree);
