--- a/web/applications/dataset-monitoring/templates/html/index.html
+++ b/web/applications/dataset-monitoring/templates/html/index.html
@@ -20,6 +20,9 @@
                                     rfp_color: "#00A",
                                     rfp_action: "location.href='#';showProjects('fundSrc',\{\{fundSrc.ID\}\});",
 
+                                    other_sources_color: "#00A",
+                                    other_sources_action: "location.href='#';showProjects('fundSrc',\{\{fundSrc.ID\}\});",
+
                                     project_color: "#00A",
                                     project_action: "updateHash(\{\{project.Fund_Src\}\},\{\{project.ID\}\});showProjects('projectId',\{\{project.ID\}\});",
 
