--- a/web/applications/dataset-monitoring/templates/html/dataset_details.html
+++ b/web/applications/dataset-monitoring/templates/html/dataset_details.html
@@ -2,9 +2,9 @@
     {% if dataset.dataset_originator %}
         <div class="attr"><span class="attr">Dataset Author(s):</span> {{dataset.dataset_originator}}</div>
     {% endif %}
-    <div class="attr"><span class="attr">Primary Point of Contact:</span> <a href="http://research.gulfresearchinitiative.org/gomri-funded-researchers/person/?pid={{dataset.ppoc_ris_id}}" target="_blank">{{dataset.ppoc.LastName}}, {{dataset.ppoc.FirstName}}</a></div>
+    <div class="attr"><span class="attr">Primary Point of Contact:</span> {{dataset.ppoc.LastName}}, {{dataset.ppoc.FirstName}}</div>
     {% if dataset.spoc_ris_id %}
-        <div class="attr"><span class="attr">Secondary Point of Contact:</span> <a href="http://research.gulfresearchinitiative.org/gomri-funded-researchers/person/?pid={{dataset.spoc_ris_id}}" target="_blank">{{dataset.spoc.LastName}}, {{dataset.spoc.FirstName}}</a></div>
+        <div class="attr"><span class="attr">Secondary Point of Contact:</span> {{dataset.spoc.LastName}}, {{dataset.spoc.FirstName}}</div>
     {% endif %}
     <div class="abstract">
         <div><span class="attr">Abstract:</span></div>
