Made Funding Sources bookmarkable like projects are.

--- a/web/applications/dataset-monitoring/templates/html/index.html
+++ b/web/applications/dataset-monitoring/templates/html/index.html
@@ -15,13 +15,13 @@
                                     yr1_folder_action: "location.href='#';showProjects('YR1',1);",
 
                                     yr1_color: "#00A",
-                                    yr1_action: "location.href='#';showProjects('fundSrc',\{\{fundSrc.ID\}\});",
+                                    yr1_action: "updateHash(\{\{fundSrc.ID\}\});showProjects('fundSrc',\{\{fundSrc.ID\}\});",
 
                                     rfp_color: "#00A",
-                                    rfp_action: "location.href='#';showProjects('fundSrc',\{\{fundSrc.ID\}\});",
+                                    rfp_action: "updateHash(\{\{fundSrc.ID\}\});showProjects('fundSrc',\{\{fundSrc.ID\}\});",
 
                                     other_sources_color: "#00A",
-                                    other_sources_action: "location.href='#';showProjects('fundSrc',\{\{fundSrc.ID\}\});",
+                                    other_sources_action: "updateHash(\{\{fundSrc.ID\}\});showProjects('fundSrc',\{\{fundSrc.ID\}\});",
 
                                     project_color: "#00A",
                                     project_action: "updateHash(\{\{project.Fund_Src\}\},\{\{project.ID\}\});showProjects('projectId',\{\{project.ID\}\});",
