Metadata template should say metadata.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/user.metadata-processed.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/user.metadata-processed.email.twig
@@ -7,7 +7,7 @@ Thank you for registering your datasets with the Gulf of Mexico Research Initiat
 <br>
 <table style='border-collapse: collapse;'>
     <tr>
-        <td colspan='4' style='border:none; padding-bottom: 0.5em;'>The following dataset has been processed and can now be viewed:</td>
+        <td colspan='4' style='border:none; padding-bottom: 0.5em;'>The following metadata has been processed and can now be viewed:</td>
     </tr>
     <tr>
         <th style='padding: 3px; text-align: center; width: 400px;'>Dataset Title</th>
