--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/qtip.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/qtip.html.twig
@@ -13,7 +13,7 @@
     <img class="info" src="{{ asset_url }}"  style="float:right;">
     {% endimage %}
     <p>
-        <strong>Title:</strong><p/><p>It is in the discretion of the researcher to define the level of data aggregation to define a dataset. If this level of data aggregation has not been identified, it is recommended to start by answering the ‘what, how, when, where’. It is also not recommended to aggregate data too much that the data attributes can no longer be segregated and discoverable.</p><p>Example Input: Hydrodynamics: ADCP Data for June – July 2012 in Station 42001</p>
+        <strong>Title:</strong><p/><p>It is in the discretion of the researcher to define the level of data aggregation to define a dataset. If this level of data aggregation has not been identified, it is recommended to start by answering the "what, how, when, and where". It is also not recommended to aggregate data too much that the data attributes can no longer be segregated and discoverable.</p><p>Example Input: Hydrodynamics: ADCP Data for June - July 2012 in Station 42001</p>
         <p>300 Characters Max</p>
     </p>
 </div>
@@ -108,7 +108,7 @@
 <div id="uploadmetadataurl_tip" style="display:none;">
     {% image '@PelagosAppBundle/Resources/public/images/info.png' %}
     <img class="info" src="{{ asset_url }}"  style="float:right;">
-    {% endimage %}>
+    {% endimage %}
     <p>
         <strong>Metadata File:</strong><p/>Please select from your local machine the metadata file for the dataset you are registering.
     </p>
@@ -119,7 +119,7 @@
     <img class="info" src="{{ asset_url }}"  style="float:right;">
     {% endimage %}
     <p>
-        <strong>Requires Authentication:</strong><p/> If accessing the files requires user authentication, please click ‘Yes’ (default is ‘No’).
+        <strong>Requires Authentication:</strong><p/> If accessing the files requires user authentication, please click "Yes" (default is "No").
     </p>
 </div>
 
@@ -128,7 +128,7 @@
     <img class="info" src="{{ asset_url }}"  style="float:right;">
     {% endimage %}
     <p>
-        <strong>Pull Source Data::</strong><p/> If the source data is archived in a cyber-infrastructure that can be maintained in the next decade, select ‘No’. If unsure, select ‘Yes’.
+        <strong>Pull Source Data:</strong><p/> If the source data is archived in a cyber-infrastructure that can be maintained in the next decade, select "No". If unsure, select "Yes".
     </p>
 </div>
 
@@ -137,7 +137,7 @@
     <img class="info" src="{{ asset_url }}"  style="float:right;">
     {% endimage %}
     <p>
-        <strong>Download Certain Times Only:</strong><p/> If you prefer for GRIIDC to download the time only on specified start period, click ‘Yes’ (default is ‘No’).
+        <strong>Download Certain Times Only:</strong><p/> If you prefer for GRIIDC to download the time only on specified start period, click "Yes" (default is "No").
     </p>
 </div>
 
@@ -182,14 +182,14 @@
     <img class="info" src="{{ asset_url }}"  style="float:right;">
     {% endimage %}
     <p>
-        <strong>Restrictions:</strong><p/> If data is available to the general public, select ‘None’. Select ‘Restricted’ if data cannot be shared to anyone. Select ‘Requires Author’s Approval’ if you can share the data but prefer to control the sharing of the dataset. In the later case, GRIIDC will maintain a list of users associated to a dataset.
+        <strong>Restrictions:</strong><p/> If data is available to the general public, select "None". Select "Restricted" if data cannot be shared to anyone. Select "Requires Author's Approval" if you can share the data but prefer to control the sharing of the dataset. In the later case, GRIIDC will maintain a list of users associated to a dataset.
     </p>
 </div>
 
 <div id="doi_tip" style="display:none;">
     {% image '@PelagosAppBundle/Resources/public/images/info.png' %}
     <img class="info" src="{{ asset_url }}"  style="float:right;">
-        {% endimage %}
+    {% endimage %}
     <p>
         <strong>Digital Object Identifier:</strong><p/> If your dataset has been issued a DOI from another repository or archive, please provide it here. Please note that this field is for <strong>dataset</strong> DOIs only, as publication DOIs are recorded elsewhere.
     </p>
