Only include latest registry entry for GoMRI datasets in space used.
Also, removed space available.

--- a/web/modules/agsp/templates/html/datasets.html
+++ b/web/modules/agsp/templates/html/datasets.html
@@ -28,6 +28,5 @@
 </form>
 <p class="note">ordered by number of datasets registered then datasets identified</p>
 <div style="margin-top:20px; margin-right:20px; text-align:right;">
-    Total storage space used: {{used_storage_space}}<br />
-    Total storage space available: {{avail_storage_space}}
+    Total storage space used: {{used_storage_space}}
 </div>
