Modified tree controller and templates to work with new model.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Api/Tree/projects.json.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Api/Tree/projects.json.twig
@@ -2,7 +2,7 @@
 {% for project in projects %}
     {
         "data": {
-            "title": "{{project.getTitle | raw}}",
+            "title": "{{project.getName | raw}}",
             "attr": {
                 "style": "color:{{tree.project_color}}"
             }
