--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Api/Tree/research_awards.json.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Api/Tree/research_awards.json.twig
@@ -1,52 +1,45 @@
 [
-    {% if not YR1.hide and YR1.top %}
-        {% include 'json/YR1_outer.json' %}
-        {% if RFPS or tree.show_other_sources %}
-            ,
-        {% endif %}
-    {% endif %}
-    {% for fundSrc in RFPS %}
+    {% for fundingOrg in fundingOrgs %}
         {
             "data": {
-                "title": "{{fundSrc.getName}}",
+                "title": "{{fundingOrg.getName}}",
                 "attr": {
                     "style": "color:{{tree.rfp_color}}"
                 }
-            },
-            "attr": {
-                "id": "projects_funding-cycle_{{fundSrc.getId}}",
-                "action": "{{tree.rfp_action | evaluate}}"
-            }
+             },
+            "children": [
+                {% for fundSrc in fundingOrg.getFundingCycles %}
+                    {
+                        "data": {
+                            "title": "{{fundSrc.getName}}",
+                            "attr": {
+                                "style": "color:{{tree.rfp_color}}"
+                            }
+                        },
+                        "attr": {
+                            "id": "projects_funding-cycle_{{fundSrc.getId}}",
+                            "action": "{{tree.rfp_action | evaluate}}"
+                        }
+                        {% if tree.max_depth > 0 %}
+                            ,
+                            {% if tree.expand_to_depth > 0 %}
+                                "state": "open"
+                            {% else %}
+                                "state": "closed"
+                            {% endif %}
+                        {% endif %}
+                    }
+                    {% if not loop.last %}
+                        ,
+                    {% endif %}
+                {% endfor %}
+            ]
         }
         {% if not loop.last %}
             ,
         {% endif %}
     {% endfor %}
-    {% if not YR1.hide and not YR1.top %}
-        {% if RFPS %}
-            ,
-        {% endif %}
-        {% include 'PelagosAppBundle:Api:Tree/YR1_outer.json.twig' %}
-    {% endif %}
-    {% if tree.show_other_sources | default %}
-        {% if not YR1.hide or RFPS %}
-            ,
-        {% endif %}
-        {
-            "data": {
-                "title": "{{tree.other_sources_label|default}}",
-                "attr": {
-                    "style": "color:{{tree.other_sources_folder_color|default}}"
-                }
-            },
-            "attr": {
-                "id": "otherSources",
-                "action": "{{tree.other_sources_folder_action | default | evaluate}}"
-            },
-            "state": "open"
-        }
-    {% endif %}
-    {% if YR1.hide and not RFPS and not tree.show_other_sources %}
+    {% if not fundingOrgs %}
         {
             "data": {
                 "title": "no datasets found",
