--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Api/Tree/researchers.json.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Api/Tree/researchers.json.twig
@@ -2,13 +2,13 @@
 {% for person in people %}
     {
         "data": {
-            "title": "{{person.getLastName | raw}}, {{person.getFirstName | raw}} <span class='treeInstName'>({{person.Institution_Name | raw}})</span>",
+            "title": "{{person.lastName | raw}}, {{person.firstName | raw}}",
             "attr": {
                 "style": "color:{{tree.researcher_color}}"
             }
         },
         "attr": {
-            "id": "projects_peopleId_{{person.getId}}",
+            "id": "projects_peopleId_{{person.id}}",
             "action": "{{tree.researcher_action | evaluate}}"
         }
         {% if tree.max_depth > 0 %}
