--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
@@ -3,15 +3,24 @@
 {% block head %}
     {{ parent() }}
 
-    {% stylesheets '@PelagosAppBundle/Resources/public/css/dataset-monitoring.css' '@PelagosAppBundle/Resources/public/css/scrollbars.css' %}
+    {% stylesheets
+        '@PelagosAppBundle/Resources/public/css/dataset-monitoring.css'
+        '@PelagosAppBundle/Resources/public/css/scrollbars.css'
+    %}
         {{ add_css(asset_url) }}
     {% endstylesheets %}
 
     {{ add_js('https://cdnjs.cloudflare.com/ajax/libs/jquery-hashchange/1.3/jquery.ba-hashchange.min.js') }}
 
-    {% javascripts '@PelagosAppBundle/Resources/public/js/dataset-monitoring.js' %}
+    {% javascripts
+        '@PelagosAppBundle/Resources/public/js/dataset-monitoring.js'
+        '@PelagosAppBundle/Resources/public/js/tree.js'
+        '@FOSJsRoutingBundle/Resources/public/js/router.js'
+    %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
+
+    {{ add_js(path('fos_js_routing_js', { callback: 'fos.Router.setData' })) }}
 {% endblock %}
 
 {% block body %}
@@ -23,34 +32,19 @@
                         <script type="text/javascript">
                             var tree = {
                                         theme: "classic",
-                                        max_depth: 1,
+                                        max_depth: 2,
                                         expand_to_depth: 0,
                                         animation: 250,
                                         type: "ra",
 
-                                        yr1_folder_color: "#00A",
-                                        yr1_folder_action: "location.href='#';showProjects('YR1',1);",
-
-                                        yr1_color: "#00A",
-                                        yr1_action: "updateHash(\{\{fundSrc.ID\}\});showProjects('fundSrc',\{\{fundSrc.ID\}\});",
-
                                         rfp_color: "#00A",
-                                        rfp_action: "updateHash(\{\{fundSrc.ID\}\});showProjects('fundSrc',\{\{fundSrc.ID\}\});",
-
-                                        other_sources_color: "#00A",
-                                        other_sources_action: "updateHash(\{\{fundSrc.ID\}\});showProjects('fundSrc',\{\{fundSrc.ID\}\});",
+                                        rfp_action: "updateHash(\{\{fundSrc.id\}\});showProjects('fundSrc',\{\{fundSrc.id\}\});",
 
                                         project_color: "#00A",
-                                        project_action: "updateHash(\{\{project.Fund_Src\}\},\{\{project.ID\}\});showProjects('projectId',\{\{project.ID\}\});",
-
-                                        dataset_color: "#00A",
-                                        dataset_action: "location.href='#';showDataset(\{\{dataset.ID\}\});",
+                                        project_action: "updateHash(\{\{project.fundingCycle.id\}\},\{\{project.id\}\});showProjects('projectId',\{\{project.id\}\});",
 
                                         researcher_color: "#00A",
-                                        researcher_action: "location.href='#';showProjects('peopleId',\{\{person.ID\}\});",
-
-                                        institution_color: "#00A",
-                                        institution_action: "location.href='#';showProjects('institutionId',\{\{institution.ID\}\});",
+                                        researcher_action: "location.href='#';showProjects('peopleId',\{\{person.id\}\});",
 
                                         afteropen: "$(window).hashchange();"
                                        }
