--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-monitoring.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-monitoring.css
@@ -18,3 +18,12 @@
     width: 60%;
     height: 100%;
 }
+
+#right .spinner {
+    display: none;
+    position: absolute;
+    left: 50%;
+    margin-left: -30px;
+    top: 50%;
+    margin-top: -30px;
+}
