--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
@@ -59,6 +59,13 @@
             <div id="content">
                 <div class="viewport">
                     <div class="overview"></div>
+                    <div class="spinner">
+                        <div>
+                            {% image '@PelagosAppBundle/Resources/public/images/spinner.gif' %}
+                                <img src="{{ asset_url }}">
+                            {% endimage %}
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
