Progress on dataset listing.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/pdf.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/pdf.html.twig
@@ -22,6 +22,6 @@
     </head>
     <body style='font-family:'>
         <div id='header'><img src='{{baseUrl}}/includes/images/griidc_header.png'></div>
-        {% include 'html/projects.html' %}
+        {% include 'html/projects.html' with {'pdf' : true} %}
     </body>
 </html>
