--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
@@ -33,25 +33,26 @@
 
         {% for dataset in datasets %}
 
-            {% if dataset.identified == '10' %}
+            {% if dataset.identifiedStatus == constant('Pelagos\\Entity\\DIF::STATUS_APPROVED') %}
                 {% set identified_green = identified_green+1 %}
-            {% elseif dataset.identified == '-1' %}
+            {% elseif dataset.identifiedStatus == '-1' %}
                 {% set identified_red = identified_red+1 %}
-            {% elseif dataset.identified == '0' %}
+            {% elseif dataset.identifiedStatus == '0' %}
                 {% set identified_red = identified_red+1 %}
-            {% elseif dataset.identified == '1' %}
+            {% elseif dataset.identifiedStatus == '1' %}
                 {% set identified_yellow = identified_yellow+1 %}
             {% endif %}
 
-            {% if dataset.registered == '10' %}
+            {% if dataset.datasetSubmissionStatus == constant('Pelagos\\Entity\\DatasetSubmission::STATUS_COMPLETE') %}
                 {% set registered_green = registered_green+1 %}
-            {% elseif dataset.registered == '1' %}
+                {% set identified_title = "A DIF has been submitted for this dataset and is in review." %}
+            {% elseif dataset.datasetSubmissionStatus == '1' %}
                 {% set registered_yellow = registered_yellow+1 %}
             {% else %}
                 {% set registered_red = registered_red+1 %}
             {% endif %}
 
-            {% if dataset.registered != '10' %}
+            {% if dataset.datasetSubmissionStatus != '10' %}
                 {% set metadata_na = metadata_na+1 %}
             {% elseif dataset.metadata == '10' %}
                 {% set metadata_green = metadata_green+1 %}
@@ -69,7 +70,7 @@
                 {% set metadata_na = metadata_na+1 %}
             {% endif %}
 
-            {% if dataset.registered != '10' %}
+            {% if dataset.datasetSubmissionStatus != '10' %}
                 {% set available_na = available_na+1 %}
             {% elseif dataset.available == 10 or dataset.available == 7 %}
                 {% set available_green = available_green+1 %}
@@ -92,56 +93,56 @@
             {% endif %}
 
             <tr udi="{{dataset.udi}}">
-                <td class="udi details"><a href="{{hostUrl}}/data/{{dataset.udi}}" target="_blank">{{dataset.udi}}</a></td>
-                <td class="details"><a href="{{hostUrl}}/data/{{dataset.udi}}" target="_blank">{{dataset.title}}</a></td>
-                <td class="status" title="{{(dataset.identified ~ '_identified') | statusToTitle}}">
-                    <span style="display:none;">{{dataset.identified}}</span>
-                    <img src="{{baseUrl}}/includes/images/{{dataset.identified | statusToImg}}">
+                <td class="udi details"><a href="/data/{{dataset.udi}}" target="_blank">{{dataset.udi}}</a></td>
+                <td class="details"><a href="/data/{{dataset.udi}}" target="_blank">{{dataset.title}}</a></td>
+                <td class="status" title="{{ identified_title | default }}">
+                    <span style="display:none;">{{dataset.identifiedStatus}}</span>
+                    <img src="{{ identified_icon | default }}">
                 </td>
-                <td class="status" title="{{(dataset.registered ~ '_registered') | statusToTitle}}">
-                    <span style="display:none;">{{dataset.registered}}</span>
-                    <img src="{{baseUrl}}/includes/images/{{dataset.registered | statusToImg}}">
+                <td class="status" title="{{ registered_title | default }}">
+                    <span style="display:none;">{{dataset.datasetSubmissionStatus}}</span>
+                    <img src="{{ registered_icon | default }}">
                 </td>
-                <td class="status" title="{% if dataset.registered %}{{(dataset.metadata ~ '_metadata') | statusToTitle}}{% else %}{{'-1_metadata' | statusToTitle}}{% endif %}">
-                    <span style="display:none;">{% if dataset.registered %}{{dataset.metadata}}{% else %}-1{% endif %}</span>
-                    <img src="{{baseUrl}}/includes/images/{% if dataset.registered %}{{dataset.metadata | statusToImg}}{% else %}{{'-1' | statusToImg}}{% endif %}">
+                <td class="status" title="{{ metadata_title | default }}">
+                    <span style="display:none;">{{dataset.metadataStatus}}</span>
+                    <img src="{{ metadata_icon | default }}">
                 </td>
-                <td class="status" title="{% if dataset.registered %}{{(dataset.available ~ '_available') | statusToTitle}}{% else %}{{'-1_available' | statusToTitle}}{% endif %}">
-                    <span style="display:none;">{% if dataset.registered %}{{dataset.available}}{% else %}-1{% endif %}</span>
-                    <img src="{{baseUrl}}/includes/images/{% if dataset.registered %}{{dataset.available | statusToImg}}{% else %}{{'-1' | statusToImg}}{% endif %}">
+                <td class="status" title="{{ available_title | default }}">
+                    <span style="display:none;">{{ dataset.availabilityStatus }}</span>
+                    <img src="{{ available_icon | default }}">
                 </td>
             </tr>
 
         {% endfor %}
 
-    {% if not pdf %}
+    {% if not pdf | default %}
     </tbody>
     <tfoot>
     {% endif %}
         <tr style="border-top:3.25px solid black;">
             <th style="text-align:center; font-weight:bold;" data-column="0" rowspan="4">TOTALS</th>
-            <th style="text-align:right;"><img src="{{baseUrl}}/includes/images/check.png"></th>
+            <th style="text-align:right;"><img src="/includes/images/check.png"></th>
             <td class="status">{{identified_green}}</td>
             <td class="status">{{registered_green}}</td>
             <td class="status">{{metadata_green}}</td>
             <td class="status">{{available_green}}</td>
         </tr>
         <tr>
-            <th style="text-align:right;"><img src="{{baseUrl}}/includes/images/triangle_yellow.png"></th>
+            <th style="text-align:right;"><img src="/includes/images/triangle_yellow.png"></th>
             <td class="status">{{identified_yellow}}</td>
             <td class="status">{{registered_yellow}}</td>
             <td class="status">{{metadata_yellow}}</td>
             <td class="status">{{available_yellow}}</td>
         </tr>
         <tr>
-            <th style="text-align:right;"><img src="{{baseUrl}}/includes/images/x.png"></th>
+            <th style="text-align:right;"><img src="/includes/images/x.png"></th>
             <td class="status" bgcolor='#D8D8D8'></td>
             <td class="status">{{registered_red}}</td>
             <td class="status">{{metadata_red}}</td>
             <td class="status">{{available_red}}</td>
         </tr>
         <tr>
-            <th style="text-align:right;"><img src="{{baseUrl}}/includes/images/na.png"></th>
+            <th style="text-align:right;"><img src="/includes/images/na.png"></th>
             <td class="status" bgcolor='#D8D8D8'></td>
             <td class="status" bgcolor='#D8D8D8'></td>
             <td class="status">{{metadata_na}}</td>
@@ -155,7 +156,7 @@
             <th>Metadata</th>
             <th>Available</th>
         </tr>
-    {% if pdf %}
+    {% if pdf | default %}
     </tbody>
     {% else %}
     </tfoot>
