Fixed logic for counting statie. Made icon asseted. Added project.css if base64 encoded images for treesorter.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
@@ -6,6 +6,7 @@
     {% stylesheets
         '@PelagosAppBundle/Resources/public/css/dataset-monitoring.css'
         '@PelagosAppBundle/Resources/public/css/scrollbars.css'
+        '@PelagosAppBundle/Resources/public/css/projects.css'
     %}
         {{ add_css(asset_url) }}
     {% endstylesheets %}
