--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
@@ -30,66 +30,126 @@
         {% set available_yellow = 0 %}
         {% set available_red = 0 %}
         {% set available_na = 0 %}
+        
+        {% image '@PelagosAppBundle/Resources/public/images/check.png' %}
+        {% set green_icon = asset_url %}
+        {% endimage %}
+        
+        {% image '@PelagosAppBundle/Resources/public/images/triangle_yellow.png' %}
+        {% set yellow_icon = asset_url %}
+        {% endimage %}
+        
+        {% image '@PelagosAppBundle/Resources/public/images/x.png' %}
+        {% set red_icon = asset_url %}
+        {% endimage %}
+        
+        {% image '@PelagosAppBundle/Resources/public/images/na.png' %}
+        {% set na_icon = asset_url %}
+        {% endimage %}
 
         {% for dataset in datasets %}
 
             {% if dataset.identifiedStatus == constant('Pelagos\\Entity\\DIF::STATUS_APPROVED') %}
                 {% set identified_green = identified_green+1 %}
-            {% elseif dataset.identifiedStatus == '-1' %}
+                {% set identified_title = "This dataset has been identified and the DIF has been approved." %}
+                {% set identified_icon = green_icon %}
+            {% elseif dataset.identifiedStatus == constant('Pelagos\\Entity\\DIF::STATUS_UNSUBMITTED') %}
+                {% set identified_red = identified_yellow+1 %}
+                {% set identified_title = "A DIF has been submitted for this dataset and is in review." %}
+                {% set identified_icon = yellow_icon %}
+            {% elseif dataset.identifiedStatus == constant('Pelagos\\Entity\\DIF::STATUS_SUBMITTED') %}
                 {% set identified_red = identified_red+1 %}
-            {% elseif dataset.identifiedStatus == '0' %}
-                {% set identified_red = identified_red+1 %}
-            {% elseif dataset.identifiedStatus == '1' %}
-                {% set identified_yellow = identified_yellow+1 %}
+                {% set identified_title = "" %}
+                {% set identified_icon = red_icon %}
             {% endif %}
 
             {% if dataset.datasetSubmissionStatus == constant('Pelagos\\Entity\\DatasetSubmission::STATUS_COMPLETE') %}
                 {% set registered_green = registered_green+1 %}
-                {% set identified_title = "A DIF has been submitted for this dataset and is in review." %}
-            {% elseif dataset.datasetSubmissionStatus == '1' %}
+                {% set registered_title = "This dataset has been registered successfully." %}
+                {% set registered_icon = green_icon %}
+            {% elseif dataset.datasetSubmissionStatus == constant('Pelagos\\Entity\\DatasetSubmission::STATUS_INCOMPLETE') %}
                 {% set registered_yellow = registered_yellow+1 %}
-            {% else %}
+                {% set registered_title = "A registration has been created, but a data file was not provided at the time of
+                registration." %}
+                {% set registered_icon = yellow_icon %}
+            {% elseif dataset.datasetSubmissionStatus == constant('Pelagos\\Entity\\DatasetSubmission::STATUS_UNSUBMITTED')%}
                 {% set registered_red = registered_red+1 %}
+                {% set registered_title = "This dataset has not yet been registered." %}
+                {% set registered_icon = red_icon %}
             {% endif %}
 
-            {% if dataset.datasetSubmissionStatus != '10' %}
+            {% if dataset.datasetSubmissionStatus != constant('Pelagos\\Entity\\DatasetSubmission::STATUS_COMPLETE') %}
                 {% set metadata_na = metadata_na+1 %}
-            {% elseif dataset.metadata == '10' %}
+                {% set metadata_title = "This dataset has not yet been registered." %}
+                {% set metadata_icon = na_icon %}
+            {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_ACCEPTED') %}
                 {% set metadata_green = metadata_green+1 %}
-            {% elseif dataset.metadata == '-1' %}
+                {% set metadata_title = "Metadata for this dataset is available, ISO compliant, and has been reviewed and accepted." %}
+                {% set metadata_icon = green_icon %}
+            {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_NONE') %}
                 {% set metadata_na = metadata_na+1 %}
-            {% elseif dataset.metadata == '0' %}
+                {% set metadata_title = "This dataset has not yet been registered." %}
+                {% set metadata_icon = na_icon %}
+            {% elseif dataset.metadataStatus == '0' %}
                 {% set metadata_red = metadata_red+1 %}
-            {% elseif dataset.metadata == '1' %}
+                {% set registered_title = "This dataset has been registered, but no metadata has been submitted." %}
+                {% set metadata_icon = na_icon %}
+            {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_SUBMITTED') %}
                 {% set metadata_yellow = metadata_yellow+1 %}
-            {% elseif dataset.metadata == '2' %}
+                {% set metadata_title = "Metadata for this dataset has been submitted." %}
+                {% set metadata_icon = yellow_icon %}
+            {% elseif dataset.metadataStatus == constant('Pelagos\\Entity\\DatasetSubmission::METADATA_STATUS_IN_REVIEW') %}
                 {% set metadata_yellow = metadata_yellow+1 %}
-            {% elseif dataset.metadata is null %}
+                {% set metadata_title = "Metadata for this dataset has been submitted and is in review." %}
+                {% set metadata_icon = yellow_icon %}
+            {% elseif dataset.metadataStatus is null %}
                 {% set metadata_na = metadata_na+1 %}
+                {% set metadata_title = "This dataset has not yet been registered, therefore no metadata is available." %}
+                {% set metadata_icon = na_icon %}
             {% else %}
                 {% set metadata_na = metadata_na+1 %}
+                {% set metadata_title = "This dataset has not yet been registered, therefore no metadata is available." %}
+                {% set metadata_icon = na_icon %}
             {% endif %}
 
-            {% if dataset.datasetSubmissionStatus != '10' %}
+            {% if dataset.datasetSubmissionStatus != constant('Pelagos\\Entity\\DatasetSubmission::STATUS_COMPLETE') %}
                 {% set available_na = available_na+1 %}
-            {% elseif dataset.available == 10 or dataset.available == 7 %}
+                {% set available_icon = na_icon %}
+            {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_PUBLICLY_AVAILABLE') or dataset.available == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_PUBLICLY_AVAILABLE_REMOTELY_HOSTED') %}
                 {% set available_green = available_green+1 %}
-            {% elseif dataset.available == '-1' %}
+                {% set available_title = "This dataset is available for all users to download." %}
+                {% set available_icon = na_icon %}
+            {% elseif dataset.availabilityStatus == '-1' %}
                 {% set available_na = available_na+1 %}
-            {% elseif dataset.available == 0 %}
+                {% set available_title = "This dataset has not yet been registered, therefore it is not yet available." %}
+                {% set available_icon = na_icon %}
+            {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_NOT_AVAILABLE') %}
                 {% set available_red = available_red+1 %}
-            {% elseif dataset.available == 4 %}
+                {% set available_title = "This dataset has been registered, but the data is not yet available." %}
+                {% set available_icon = na_icon %}
+            {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_PENDING_METADATA_APPROVAL') %}
                 {% set available_yellow = available_yellow+1 %}
-            {% elseif dataset.available == 5 %}
+                {% set available_title = "This dataset does not yet have approved metadata, therefore is not available for download." %}
+                {% set available_icon = na_icon %}
+            {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_RESTRICTED_REMOTELY_HOSTED') %}
                 {% set available_yellow = available_yellow+1 %}
-            {% elseif dataset.available == 6 %}
+                {% set available_title = "This dataset has been marked as restricted to author only, but is remotely hosted on a non-GRIIDC server, so availability status is not guaranteed to be accurate." %}
+            {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_AVAILABLE_WITH_APPROVAL_REMOTELY_HOSTED') %}
                 {% set available_yellow = available_yellow+1 %}
-            {% elseif dataset.available == 7 %}
+                {% set available_title = "This dataset has been marked as restricted to certain users, but is remotely hosted on a non-GRIIDC server, so availability status is not guaranteed to be accurate." %}
+                {% set available_icon = na_icon %}
+            {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_PUBLICLY_AVAILABLE_REMOTELY_HOSTED') %}
                 {% set available_yellow = available_yellow+1 %}
-            {% elseif dataset.available == 8 %}
+                {% set available_title = "This dataset has been marked as available for all users to download, but is remotely hosted on a non-GRIIDC server, so availability status is not guaranteed to be accurate." %}
+                {% set available_icon = na_icon %}
+            {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_RESTRICTED') %}
                 {% set available_yellow = available_yellow+1 %}
-            {% elseif dataset.available == 9 %}
+                {% set available_title = "This dataset is available, but download is restricted to author only." %}
+                {% set available_icon = na_icon %}
+            {% elseif dataset.availabilityStatus == constant('Pelagos\\Entity\\DatasetSubmission::AVAILABILITY_STATUS_AVAILABLE_WITH_APPROVAL') %}
                 {% set available_yellow = available_yellow+1 %}
+                {% set available_title = "This dataset is available, but download is restricted to certain users." %}
+                {% set available_icon = na_icon %}
             {% endif %}
 
             <tr udi="{{dataset.udi}}">
@@ -121,28 +181,36 @@
     {% endif %}
         <tr style="border-top:3.25px solid black;">
             <th style="text-align:center; font-weight:bold;" data-column="0" rowspan="4">TOTALS</th>
-            <th style="text-align:right;"><img src="/includes/images/check.png"></th>
+            <th style="text-align:right;">
+                <img src="{{green_icon}}">
+            </th>
             <td class="status">{{identified_green}}</td>
             <td class="status">{{registered_green}}</td>
             <td class="status">{{metadata_green}}</td>
             <td class="status">{{available_green}}</td>
         </tr>
         <tr>
-            <th style="text-align:right;"><img src="/includes/images/triangle_yellow.png"></th>
+            <th style="text-align:right;">
+                <img src="{{yellow_icon}}">
+            </th>
             <td class="status">{{identified_yellow}}</td>
             <td class="status">{{registered_yellow}}</td>
             <td class="status">{{metadata_yellow}}</td>
             <td class="status">{{available_yellow}}</td>
         </tr>
         <tr>
-            <th style="text-align:right;"><img src="/includes/images/x.png"></th>
+            <th style="text-align:right;">
+                <img src="{{red_icon}}">
+            </th>
             <td class="status" bgcolor='#D8D8D8'></td>
             <td class="status">{{registered_red}}</td>
             <td class="status">{{metadata_red}}</td>
             <td class="status">{{available_red}}</td>
         </tr>
         <tr>
-            <th style="text-align:right;"><img src="/includes/images/na.png"></th>
+            <th style="text-align:right;">
+                <img src="{{na_icon}}">
+            </th>
             <td class="status" bgcolor='#D8D8D8'></td>
             <td class="status" bgcolor='#D8D8D8'></td>
             <td class="status">{{metadata_na}}</td>
